--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
   padding: 0;
   font--family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
+  color: #0E0E0E;
 }
 
 /*
@@ -38,7 +38,7 @@ header h1.logo:hover {
  */
 
  .container {
-   width: 1300px;
+   width: 1100px;
    margin: 0 auto;
  }
 
@@ -49,6 +49,7 @@ div.home {
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
          -border-radius: 6px;
+  opacity: 0.4;
 }
 
 div.about {
@@ -57,6 +58,7 @@ div.about {
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
          -border-radius: 6px;
+  opacity: 0.4;
 }
 
 
