--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,9 @@
 body{
-  background-image: url("w165.jpg");
-  background-repeat: no-repeat;
-  background-size: 1467px 750px;
+  background-color: grey;
   margin: 0;
   padding: 0;
-  font--family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #0E0E0E;
+  font-family: "Freestyle Script", "Gabriola", Helvetica, Arial, sans-serif;
+  color: #0A5709;
 }
 
 /*
@@ -44,23 +42,26 @@ header h1.logo:hover {
 
 
 div.home {
-  padding: 10px 0 30px 0;
+  background-image: url("../images/w165.jpg");
+  background-repeat: no-repeat;
+  background-size: 850px 480px;
+  background-position:  top right;
+  padding: 300px 0 1000px 0;
   background-color: #E6E6FA;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-         -border-radius: 6px;
-  opacity: 0.4;
+  -webkit-border-radius: 30px;
+     -moz-border-radius: 30x;
+         -border-radius: 30px;
+  opacity: 0.8;
 }
 
 div.about {
-  padding: 10px 0 30px 0;
+  padding: 300px 0 30px 0;
   background-color: #E6E6FA;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-         -border-radius: 6px;
+  -webkit-border-radius: 30px;
+     -moz-border-radius: 30x;
+         -border-radius: 30px;
   opacity: 0.4;
 }
-
 
 .menu {
   float: right;
@@ -69,7 +70,7 @@ div.about {
 
 .menu li {
   display: inline;
-  font-size: 1.3em;
+  font-size: 1.5em;
   font-weight: lighter;
 }
 
