--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 {%block content%}
 <div class="exercise">
-    <h1>Page for exercises</h1>
+    <h1><a href="exercise.html">Page for exercises</a></h1>
 
 </div>
 {%endblock%}
