--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <meta name="viewport" content="width=device-width, initial scale=1.0">
       <title>Flask App</title>
       <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
   </head>
   <body>
     <header>
       <div class="container">
+        <meta name="viewport" content="width=device-width, initial scale=1.0">
         <h1 class="logo"> Scorpakitch motorhome</h1>
         <strong><nav>
           <ul class="menu">
